--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/vpotseluyko/mjs-mocha"
+    "url": "https://github.com/EliseevNP/mjs-mocha"
   },
   "author": "Nikita Eliseev <npeliseev@gmail.com>",
   "license": "ISC",
