--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "mjs-mocha": "src/index.js"
   },
   "scripts": {
-    "test": "cd test && npm i && npm run test",
+    "test": "cd test && npm i && npm run test:js && npm run test:mjs",
     "eslint": "eslint ./ --ext .js,.mjs",
     "eslint:fix": "eslint ./ --ext .js,.mjs --fix"
   },
